fix: use get(0) instead of getFirst() for Java 17 compatibility
List.getFirst() requires Java 21+; CI runs on Java 17.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>